Solves unwanted scrollbar in firefox

--- a/app/src/css/mx_modal.css
+++ b/app/src/css/mx_modal.css
@@ -42,7 +42,8 @@
   top: 5px;
   margin: auto;
   resize: both;
-  overflow:auto; /* resize need auto: selectize dropdown need visible...*/
+  overflow-y:auto; /* resize need auto: selectize dropdown need visible...*/
+  overflow-x:hidden;
   display: flex;
   flex-direction: column;
 }
